[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=7.0"]

[tool.setuptools_scm]
write_to = "broqer/_version.py"

[tool.ruff]
exclude = ["build", "dist", "docs", "tests", "examples", "setup.py", "broqer/_version.py"]
line-length = 79
indent-width = 4

# pycodestyle (E, W)
# mccabe (C90)
# flake8-bugbear (B)
# flake8-async (ASYNC)
# flake8-builtins (A)
# flake8-annotations (ANN) not used
# flake8-quotes (Q) not used
# We remain at flake8 3.7.9 for compatibility reasons
# pylint (PLC, PLE, PLR, PLW) not used
# ...
[tool.ruff.lint]
select = ["E", "W", "C90", "A", "B", "ASYNC"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"